fixed spacing on title

--- a/options.css
+++ b/options.css
@@ -18,7 +18,7 @@
      text-transform: none;
      letter-spacing: 0px;
      padding-top: 50px;
-     padding-left: 150px;
+     margin-left: 20%;
  }
 
  .main {
